--- a/Keyano/Keyano/Keyano.csproj
+++ b/Keyano/Keyano/Keyano.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChasesClass.cs" />
     <Compile Include="Keyano.cs">
       <SubType>Form</SubType>
     </Compile>
