--- a/Keyano/Keyano/Keyano.csproj
+++ b/Keyano/Keyano/Keyano.csproj
@@ -80,6 +80,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Keyano Sounds\AKey.wav" />
+    <Content Include="Keyano Sounds\GKey.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
